# clothing_classification_capstone

./: .gitignore  Dockerfile  LICENSE  Makefile  README.md  activate_dashboard.py  activate_vgg16.py  api.py  app.py  best_ann.pth  best_model_run_0.pth  best_resnet50.pth  checkpoint_compat.py  class_mapping.json  config.py  cross_validation.py  eda.py  ensemble.py  evaluate.py  fastapi_app.py  fastapi_minimal.py  generate_model_comparison_chart.py  inference.py  model_comparison_chart.py  models.py  models_collection.py  predict.py  project_architecture.mmd  pyproject.toml  requirements.txt  restructure_dataset.py  setup_dataset.py  train.py  train_keras.py  train_models_pipeline.py  update_chart.py
.github/agents/: resnet-state-dict-fixer.agent.md
Project Report/: Project_Report_Clothing_Classification_sukhendu.docx
app/: app.py  fastapi_app.py
backend/: main.py
outputs/: detailed_metrics.csv
reports/: train_run_metadata.json
reports/logs_efficientnet_b3/: events.out.tfevents.1774693087.Sukhendu.33668.1
reports/logs_mobilenet_v3/: events.out.tfevents.1774694593.Sukhendu.33668.2
reports/logs_resnet50/: events.out.tfevents.1774692824.Sukhendu.33668.0
scripts/: activate_dashboard.py  activate_vgg16.py  cross_validation.py  evaluate.py  generate_model_comparison_chart.py  predict.py  train.py  train_keras.py  train_models_pipeline.py  train_multi_run.py  update_chart.py
weights/: best_custom_cnn.pth  best_keras_model.h5  best_mobilenet_v3.pth  efficientnet.pth  efficientnet_b3.pt  efficientnet_b3.pth  mobilenet.pth  resnet50.pt  resnet50.pth  vgg16.pth
(+9 files in other folders)
